# kinda-virtual-fs

./: Cargo.toml  README.md
src/: lib.rs
