[package]
name = "kinda-virtual-fs"
version = "0.1.1"
description = " A Rust library to imitate virtual filesystem and use statically linked files"
authors = ["Nikita Podvirnyy <suimin.tu.mu.ga.mi@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/krypt0nn/kinda-virtual-fs"
edition = "2021"
